Blackpurl/src/objects/Accounting_Default_Accounts__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>A_P_Inventory_Accrual__c</fullName>
        <label>A/P Inventory Accrual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Rounding__c</fullName>
        <label>Cash Rounding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Sale_Customer_Id__c</fullName>
        <label>Cash Sale Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_of_Goods_Sold__c</fullName>
        <label>Cost of Goods Sold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Deposits__c</fullName>
        <label>Customer Deposits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Option_Clearing__c</fullName>
        <label>Deal Option Clearing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Service_Customer_Id__c</fullName>
        <label>Internal Service Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Adjustments__c</fullName>
        <label>Inventory Adjustments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Income__c</fullName>
        <label>Miscellaneous Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Income__c</fullName>
        <label>Sales Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_Accrual__c</fullName>
        <label>Stamp Duty Accrual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Credit_Accrual__c</fullName>
        <label>Store Credit Accrual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Credit_Expense__c</fullName>
        <label>Store Credit Expense</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undeposited_Direct_Deposit__c</fullName>
        <label>Undeposited Direct Deposit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undeposited_Financing__c</fullName>
        <label>Undeposited Financing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undeposited_Funds__c</fullName>
        <label>Undeposited Funds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting Default Accounts</label>
</CustomObject>